# systemrdl-pro

./: .editorconfig  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  TODOS.md  package.json  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  extension-publish-ovsx.yml  extension-publish.yml  lsp-publish.yml  viewer-publish.yml
docs/: ROADMAP.md  architecture.md  code-review-2026-05-02.md  demo.html  design.md  perf-poc-processpool.md  screencast-script.md
examples/: README.md  alias_demo.rdl  enum_demo.rdl  features_demo.rdl  gen_stress.py  perl_demo.rdl  sample.rdl  stress_1000.rdl
schemas/: elaborated-tree.json
scripts/: codegen.sh
tools/: codegen.py
